# llm-zoomcamp-hw-01-agentic-rag

./: 1_agentic_rag_notebook.ipynb  README.md  homework.md  hw01_agentic_rag.ipynb  pyproject.toml  rag_helper_hw.py
learning_code/: 1_agentic_rag_notebook_Part1.ipynb  1_agentic_rag_notebook_Part2.ipynb  rag_helper.py
