[project]
name = "llm-zoomcamp-hw-01-agentic-rag"
version = "0.1.0"
description = "homewwork and notes for module 1 agentic rag of LLM Zoomcamp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]
